--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -6,5 +6,5 @@ list(APPEND APP_INCLUDE_DIRS
         ${CMAKE_CURRENT_LIST_DIR}/include)
 
 add_executable(aluserer ${APP_SOURCES} ${CUDA_ALG_SOURCES})
-target_include_directories(aluserer PUBLIC ${APP_INCLUDE_DIRS} ${INVERTER_INCLUDE_DIRS} ${CUDA_ALG_INCLUDE_DIRS})
-target_link_libraries(aluserer PUBLIC inverter-static cuda_alg-static)
+target_include_directories(aluserer PUBLIC ${APP_INCLUDE_DIRS} ${INVERTER_INCLUDE_DIRS} ${CUDA_ALG_INCLUDE_DIRS} ${INVERTER_PARALLEL_INCLUDE_DIRS})
+target_link_libraries(aluserer PUBLIC inverter-static inverter_parallel-static cuda_alg-static)
