--- a/algs/range_doppler_terrain_correction/CMakeLists.txt
+++ b/algs/range_doppler_terrain_correction/CMakeLists.txt
@@ -1,11 +1,13 @@
 
 list(APPEND TERRAIN_CORRECTION_SOURCES
         ${CMAKE_CURRENT_LIST_DIR}/src/terrain_correction.cpp
+        ${CMAKE_CURRENT_LIST_DIR}/src/local_dem.cu
         )
 
 list(APPEND TERRAIN_CORRECTION_INCLUDE_DIRS
         ${CMAKE_CURRENT_LIST_DIR}/include
         ${CMAKE_CURRENT_LIST_DIR}/../../util/gdal/include
+        ${CMAKE_CURRENT_LIST_DIR}/../../util/cuda/include
         )
 
 add_library(terrain-correction-obj
