snapgpu-51 Target dataset class.
* One can create writable only dataset based on parameters of the input
  dataset. Unit tests added.
* Util classes for dimensions, points, etc.
* GDAL error checking macro and appropriate exceptions for that.
* Code row width 120 and param/arg formating to stack based on feedback.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,8 +28,9 @@ endif()
 find_package(GDAL REQUIRED)
 
 # Utilities
-add_subdirectory(util/gdal)
+add_subdirectory(util/common)
 add_subdirectory(util/cuda)
+add_subdirectory(util/gdal)
 
 # Algorithms
 add_subdirectory(algs/inverter)
