--- a/algs/backgeocoding/CMakeLists.txt
+++ b/algs/backgeocoding/CMakeLists.txt
@@ -10,6 +10,7 @@ list(APPEND BACKGEOCODING_INCLUDE_DIRS
         ${CMAKE_CURRENT_LIST_DIR}/../../util/gdal/include
         ${CMAKE_CURRENT_LIST_DIR}/../../util/exotic_operations/include
         ${CMAKE_CURRENT_LIST_DIR}/../../util/sentinel1/include
+        ${CMAKE_CURRENT_LIST_DIR}/../../util/snap-engine/include
         ${CMAKE_CURRENT_LIST_DIR}/../../util/cuda/include
         )
 
