alus-93: implemented org.esa.snap.core.datamodel.TiePointGrid.getPixelDouble()
getPixelDouble(double x, double y) gets the interpolated sample for the pixel located at the given x, y coordinates.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -52,6 +52,7 @@ add_subdirectory(algs/backgeocoding)
 # Test helpers
 add_subdirectory(test/EGM96)
 add_subdirectory(test/SRTM3TestUtil)
+add_subdirectory(test/tie_point_grid)
 
 # Main terminal application
 add_subdirectory(app)
