--- a/util/snap-engine/CMakeLists.txt
+++ b/util/snap-engine/CMakeLists.txt
@@ -6,6 +6,7 @@ list(APPEND SNAP-ENGINE_SOURCES
         ${CMAKE_CURRENT_LIST_DIR}/src/product_data.cc
         ${CMAKE_CURRENT_LIST_DIR}/src/srtm3_elevation_model.cc
         ${CMAKE_CURRENT_LIST_DIR}/src/srtm3_formatter.cu
+        ${CMAKE_CURRENT_LIST_DIR}/src/tie_point_grid.cu
         )
 
 list(APPEND SNAP-ENGINE_INCLUDES
