snapgpu-66 add back coherence algorithm (snapgpu-31, snapgpu-38, snapgpu-39, snapgpu-104)
coherence algorithm using tensorflow
refactoring

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,6 +43,7 @@ add_subdirectory(util/snap-engine)
 
 
 # Algorithms
+add_subdirectory(algs/coherence)
 add_subdirectory(algs/inverter)
 add_subdirectory(algs/inverter_parallel)
 add_subdirectory(algs/cuda_algorithm)
