--- a/test/SRTM3TestUtil/CMakeLists.txt
+++ b/test/SRTM3TestUtil/CMakeLists.txt
@@ -6,6 +6,8 @@ list(APPEND SRTM3_TEST_UTIL_INCLUDE_DIRS
         ${CMAKE_CURRENT_LIST_DIR}/include
         ${CMAKE_CURRENT_LIST_DIR}/../../util/snap-engine/include
         ${CMAKE_CURRENT_LIST_DIR}/../../util/exotic_operations/include
+        ${CMAKE_CURRENT_LIST_DIR}/../../util/cuda/include
+        ${CMAKE_CURRENT_LIST_DIR}/../../util/common/include
         )
 
 add_library(srtm3-test-util-obj
