--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,6 +53,7 @@ add_subdirectory(algs/backgeocoding)
 # Test helpers
 add_subdirectory(test/EGM96)
 add_subdirectory(test/SRTM3TestUtil)
+add_subdirectory(test/range_doppler_geocoding)
 add_subdirectory(test/tie_point_grid)
 
 # Main terminal application
