backgeocoding GetPosition, SarGeocoding getZeroDopplerTime, comments, licences, namespace changes, s1 utils fixes

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -37,10 +37,10 @@ endif()
 
 list(APPEND TEST_SOURCES
         src/dataset_test.cpp
-        src/terrain_correction_test.cpp
+        src/terrain_correction_test.cc
         src/terrain_correction_test_kernels.cu
         src/dem_test.cpp
-        src/orbit_state_vectors_test.cpp
+        src/orbit_state_vectors_test.cc
         src/tests_common.cpp
         src/sentinel1_test.cc
         src/backgeocoding_test.cc
@@ -48,9 +48,11 @@ list(APPEND TEST_SOURCES
         src/geo_utils_test.cpp
         src/product_data_test.cpp
         src/sar_geocoding_test.cc
-        src/srtm3_tests.cc
+        src/srtm3_altitude_test.cc
+        src/srtm3_formating_test.cc
         src/tie_point_grid_test.cc
         src/range_doppler_geocoding_test.cc
+        src/zero_doppler_time_test.cc
         )
 
 add_executable(unit_test ${TEST_SOURCES})
@@ -68,6 +70,7 @@ target_link_libraries(unit_test
         cuda_util-static
         tiePointGrid-test-static
         range-doppler-geocoding-test-static
+        sar-geocoding-test-static
         )
 
 add_executable(map_cut util/map_cut.cpp)
