--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -55,6 +55,7 @@ add_subdirectory(test/EGM96)
 add_subdirectory(test/SRTM3TestUtil)
 add_subdirectory(test/range_doppler_geocoding)
 add_subdirectory(test/tie_point_grid)
+add_subdirectory(test/sar_geocoding)
 
 # Main terminal application
 add_subdirectory(app)
