--- a/algs/range_doppler_terrain_correction/CMakeLists.txt
+++ b/algs/range_doppler_terrain_correction/CMakeLists.txt
@@ -1,5 +1,6 @@
 
 list(APPEND TERRAIN_CORRECTION_SOURCES
+        ${CMAKE_CURRENT_LIST_DIR}/src/execute.cc
         ${CMAKE_CURRENT_LIST_DIR}/src/get_position.cu
         ${CMAKE_CURRENT_LIST_DIR}/src/local_dem.cu
         ${CMAKE_CURRENT_LIST_DIR}/src/terrain_correction.cpp
@@ -7,6 +8,7 @@ list(APPEND TERRAIN_CORRECTION_SOURCES
 
 list(APPEND TERRAIN_CORRECTION_INCLUDE_DIRS
         ${CMAKE_CURRENT_LIST_DIR}/include
+        ${CMAKE_CURRENT_LIST_DIR}/../algorithm_bond/include
         ${CMAKE_CURRENT_LIST_DIR}/../../util/common/include
         ${CMAKE_CURRENT_LIST_DIR}/../../util/cuda/include
         ${CMAKE_CURRENT_LIST_DIR}/../../util/gdal/include
@@ -38,6 +40,25 @@ set_target_properties(terrain-correction-static
         OUTPUT_NAME terrain-correction
         )
 target_link_libraries(terrain-correction-static
+        PUBLIC
+        gdal-util-static
+        )
+
+add_library(terrain-correction-shared
+        SHARED
+        $<TARGET_OBJECTS:terrain-correction-obj>
+        )
+target_include_directories(terrain-correction-shared
+        PUBLIC
+        ${TERRAIN_CORRECTION_INCLUDE_DIRS}
+        )
+set_target_properties(terrain-correction-shared
+        PROPERTIES
+        OUTPUT_NAME terrain-correction
+        LIBRARY_OUTPUT_DIRECTORY ${ALUS_BINARY_OUTPUT_DIR}
+        )
+
+target_link_libraries(terrain-correction-shared
         PUBLIC
         gdal-util-static
         )
