--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -1,9 +1,19 @@
 
 list(APPEND APP_SOURCES
-        ${CMAKE_CURRENT_LIST_DIR}/src/main.cpp)
+        ${CMAKE_CURRENT_LIST_DIR}/src/main.cc)
 
 list(APPEND APP_INCLUDE_DIRS
-        ${CMAKE_CURRENT_LIST_DIR}/include)
+        ${CMAKE_CURRENT_LIST_DIR}/include
+        ${CMAKE_CURRENT_LIST_DIR}/../algs/algorithm_bond/include
+        ${CMAKE_CURRENT_LIST_DIR}/../util/common/include
+        )
 
 add_executable(aluserer ${APP_SOURCES})
-target_link_libraries(aluserer PUBLIC inverter-static inverter_parallel-static cuda_alg-static terrain-correction-static backgeocoding-static)
+
+set_target_properties(aluserer
+        PROPERTIES
+        RUNTIME_OUTPUT_DIRECTORY ${ALUS_BINARY_OUTPUT_DIR}
+        )
+
+target_include_directories(aluserer PUBLIC ${APP_INCLUDE_DIRS})
+target_link_libraries(aluserer PUBLIC dl ${Boost_PROGRAM_OPTIONS_LIBRARY})
