SNAPGPU-53: Triangular interpolation, egm96 and srtm3 base to float, finished up computeSlavePixPos

--- a/util/snap-engine/CMakeLists.txt
+++ b/util/snap-engine/CMakeLists.txt
@@ -9,6 +9,7 @@ list(APPEND SNAP-ENGINE_SOURCES
         ${CMAKE_CURRENT_LIST_DIR}/src/tie_point_grid.cu
         ${CMAKE_CURRENT_LIST_DIR}/src/tie_point_geocoding.cu
         ${CMAKE_CURRENT_LIST_DIR}/src/crs_geocoding.cu
+        ${CMAKE_CURRENT_LIST_DIR}/src/triangular_interpolation.cu
         )
 
 list(APPEND SNAP-ENGINE_INCLUDES
