--- a/algs/range_doppler_terrain_correction/CMakeLists.txt
+++ b/algs/range_doppler_terrain_correction/CMakeLists.txt
@@ -2,7 +2,7 @@
 list(APPEND TERRAIN_CORRECTION_SOURCES_CU
         ${CMAKE_CURRENT_LIST_DIR}/src/get_position.cu
         ${CMAKE_CURRENT_LIST_DIR}/src/local_dem.cu
-        ${CMAKE_CURRENT_LIST_DIR}/src/terrain_correction.cu
+        ${CMAKE_CURRENT_LIST_DIR}/src/terrain_correction_kernel.cu
         )
 list(APPEND TERRAIN_CORRECTION_SOURCES
         ${CMAKE_CURRENT_LIST_DIR}/src/execute.cc
@@ -22,6 +22,7 @@ list(APPEND TERRAIN_CORRECTION_INCLUDE_DIRS
         ${CMAKE_CURRENT_LIST_DIR}/../../util/snap-engine/include/snap-core/datamodel
         ${CMAKE_CURRENT_LIST_DIR}/../../util/exotic_operations/include
         ${CMAKE_CURRENT_LIST_DIR}/../../external/pugixml/include
+        ${CMAKE_CURRENT_LIST_DIR}/../../util/multi_threading/include
         )
 
 add_library(terrain-correction-obj-cu
@@ -59,6 +60,7 @@ target_link_libraries(terrain-correction-static
         PUBLIC
         gdal-util-static
         snap-engine-static
+        multi_threading-static
         sentinel1-util-static
         pugixml-static
         )
@@ -82,6 +84,7 @@ target_link_libraries(terrain-correction-shared
         gdal-util-static
         snap-engine-static
         sentinel1-util-static
+        multi_threading-static
         pugixml-static
         )
 
