--- a/util/snap-engine/CMakeLists.txt
+++ b/util/snap-engine/CMakeLists.txt
@@ -5,8 +5,8 @@ list(APPEND SNAP-ENGINE_SOURCES_CU
         ${CMAKE_CURRENT_LIST_DIR}/src/srtm3_elevation_model.cc
         ${CMAKE_CURRENT_LIST_DIR}/src/srtm3_formatter.cu
         ${CMAKE_CURRENT_LIST_DIR}/src/tie_point_grid.cu
-        ${CMAKE_CURRENT_LIST_DIR}/src/tie_point_geocoding.cu
-        ${CMAKE_CURRENT_LIST_DIR}/src/crs_geocoding.cu
+        ${CMAKE_CURRENT_LIST_DIR}/src/tie_point_geocoding.cc
+        ${CMAKE_CURRENT_LIST_DIR}/src/crs_geocoding.cc
         ${CMAKE_CURRENT_LIST_DIR}/src/triangular_interpolation.cu
         )
 list(APPEND SNAP-ENGINE_SOURCES
