alus-160 Dynamic metadata loading for Terrain Correction.
* Metadata parsing with integration test for Terrain correction
* Computation POD structs for Orbit State Vector and TC metadata
* Elevation handling in TC completely eliminated, using average scene
height

--- a/algs/coherence/CMakeLists.txt
+++ b/algs/coherence/CMakeLists.txt
@@ -41,6 +41,7 @@ list(APPEND COHERENCE_SOURCES
         ${CMAKE_CURRENT_LIST_DIR}/src/pugixml_meta_data_reader.cc
         ${CMAKE_CURRENT_LIST_DIR}/src/product_data_utc.cc
         ${CMAKE_CURRENT_LIST_DIR}/src/data_node.cc
+        ${CMAKE_CURRENT_LIST_DIR}/src/parse_exception.cc
         ${CMAKE_CURRENT_LIST_DIR}/src/product_node.cc
         ${CMAKE_CURRENT_LIST_DIR}/src/product_data_ushort.cc
         ${CMAKE_CURRENT_LIST_DIR}/src/product_data_short.cc
