--- a/test_integration/CMakeLists.txt
+++ b/test_integration/CMakeLists.txt
@@ -3,7 +3,10 @@ list(APPEND TEST_SOURCES_TENSORFLOW
         src/coherence_test.cc
         )
 
-list(APPEND TEST_SOURCES
+list(APPEND TEST_SOURCES_HOST
+        src/terrain_correction_metadata_test.cc)
+
+list(APPEND TEST_SOURCES_TC
         src/terrain_correction_test.cc
         src/terrain_correction_test.cu
         )
@@ -12,9 +15,22 @@ list(APPEND TEST_INCLUDE
         ${CMAKE_CURRENT_LIST_DIR}/include
         )
 
-add_executable(integration_tests_tensorflow ${TEST_SOURCES_TENSORFLOW})
-target_include_directories(integration_tests_tensorflow PUBLIC ${TEST_INCLUDE})
-target_link_libraries(integration_tests_tensorflow
+add_executable(integration_tests_host ${TEST_SOURCES_HOST})
+target_include_directories(integration_tests_host PUBLIC ${TEST_INCLUDE})
+target_link_libraries(integration_tests_host
+        PRIVATE
+        gmock_main
+        terrain-correction-static)
+add_custom_command(TARGET integration_tests_host
+        POST_BUILD
+        COMMAND cp -r ${CMAKE_CURRENT_LIST_DIR}/goods ${CMAKE_BINARY_DIR}/test_integration/.
+        COMMAND cd ${CMAKE_BINARY_DIR}/test_integration/goods && unzip -oq ${CMAKE_BINARY_DIR}/test_integration/goods/\\*.zip
+        )
+
+
+add_executable(integration_test_tensorflow ${TEST_SOURCES_TENSORFLOW})
+target_include_directories(integration_test_tensorflow PUBLIC ${TEST_INCLUDE})
+target_link_libraries(integration_test_tensorflow
         PRIVATE
         Boost::filesystem
         Boost::iostreams
@@ -25,7 +41,7 @@ target_link_libraries(integration_tests_tensorflow
         coherence-static
         )
 
-target_compile_options(integration_tests_tensorflow
+target_compile_options(integration_test_tensorflow
         PRIVATE
         -Wno-pedantic
         -Wno-unused-parameter
@@ -33,14 +49,14 @@ target_compile_options(integration_tests_tensorflow
         -Wno-unused-variable
         )
 
-add_custom_command(TARGET integration_tests_tensorflow
+add_custom_command(TARGET integration_test_tensorflow
         POST_BUILD
         COMMAND cp -r ${CMAKE_CURRENT_LIST_DIR}/goods/coherence ${CMAKE_BINARY_DIR}/test_integration/.
         )
 
-add_executable(integration_tests ${TEST_SOURCES})
-target_include_directories(integration_tests PUBLIC ${TEST_INCLUDE})
-target_link_libraries(integration_tests
+add_executable(integration_test_tc ${TEST_SOURCES_TC})
+target_include_directories(integration_test_tc PUBLIC ${TEST_INCLUDE})
+target_link_libraries(integration_test_tc
         PRIVATE
         Boost::filesystem
         Boost::iostreams
@@ -50,10 +66,3 @@ target_link_libraries(integration_tests
         sentinel1-util-static
         terrain-correction-static
         )
-
-add_custom_command(TARGET integration_tests
-        POST_BUILD
-        COMMAND cp -r ${CMAKE_CURRENT_LIST_DIR}/goods ${CMAKE_BINARY_DIR}/test_integration/.
-        COMMAND cd ${CMAKE_BINARY_DIR}/test_integration/goods && unzip -oq ${CMAKE_BINARY_DIR}/test_integration/goods/\\*.zip
-        )
-
