SNAPGPU-139 Compute Burst Offset to GPU

--- a/test_integration/CMakeLists.txt
+++ b/test_integration/CMakeLists.txt
@@ -42,10 +42,10 @@ target_link_libraries(integration-test-snap-engine
 add_custom_command(TARGET integration-test-snap-engine
         POST_BUILD
         COMMAND mkdir -p ${CMAKE_BINARY_DIR}/test_integration/goods
-        COMMAND cp -rn ${CMAKE_CURRENT_LIST_DIR}/goods/ww15mgh_b.grd ${CMAKE_BINARY_DIR}/test_integration/goods/.
-        COMMAND cp -rn ${CMAKE_CURRENT_LIST_DIR}/goods/egm96TestData.txt ${CMAKE_BINARY_DIR}/test_integration/goods/.
-        COMMAND cp -rn ${CMAKE_CURRENT_LIST_DIR}/goods/tileFormatTestData.txt ${CMAKE_BINARY_DIR}/test_integration/goods/.
-        COMMAND cp -rn ${CMAKE_CURRENT_LIST_DIR}/goods/altitudeTestData.txt ${CMAKE_BINARY_DIR}/test_integration/goods/.
+        COMMAND ln -rns ${CMAKE_CURRENT_LIST_DIR}/goods/ww15mgh_b.grd ${CMAKE_BINARY_DIR}/test_integration/goods/.
+        COMMAND ln -rns ${CMAKE_CURRENT_LIST_DIR}/goods/egm96TestData.txt ${CMAKE_BINARY_DIR}/test_integration/goods/.
+        COMMAND ln -rns ${CMAKE_CURRENT_LIST_DIR}/goods/tileFormatTestData.txt ${CMAKE_BINARY_DIR}/test_integration/goods/.
+        COMMAND ln -rns ${CMAKE_CURRENT_LIST_DIR}/goods/altitudeTestData.txt ${CMAKE_BINARY_DIR}/test_integration/goods/.
         )
 
 add_executable(integration-test-coherence ${TEST_SOURCES_COHERENCE})
@@ -111,8 +111,8 @@ target_link_libraries(integration-test-backgeocoding
         )
 add_custom_command(TARGET integration-test-backgeocoding
         POST_BUILD
-        COMMAND mkdir -p ${CMAKE_BINARY_DIR}/test_integration/goods && cp -rn
-                        ${CMAKE_CURRENT_LIST_DIR}/goods/backgeocoding ${CMAKE_BINARY_DIR}/test_integration/goods/.
+        COMMAND mkdir -p ${CMAKE_BINARY_DIR}/test_integration/goods
+        COMMAND ln -fsn ${CMAKE_CURRENT_LIST_DIR}/goods/backgeocoding ${CMAKE_BINARY_DIR}/test_integration/goods/backgeocoding
         COMMAND cp -n ${CMAKE_CURRENT_LIST_DIR}/goods/srtm_41_01.zip ${CMAKE_BINARY_DIR}/test_integration/goods/.
         COMMAND cd ${CMAKE_BINARY_DIR}/test_integration/goods && unzip -qn srtm_41_01.zip
         COMMAND cp -n ${CMAKE_CURRENT_LIST_DIR}/goods/srtm_42_01.zip ${CMAKE_BINARY_DIR}/test_integration/goods/.
